# gonza

./: .gitignore  APP_FLAWS_AUDIT.md  dashboard_audit.md  readme.md  tasks.md
.gemini/: data-integrity.md  performance-auditing.md  safe-modifications.md  synchronization.md
admin/: .gitignore  core_app  customers  finance  inventory  main.py  messaging  pyproject.toml  sales  users
admin/core/: settings.py  urls.py  utils.py
admin/templates/admin/: index.html
backend/: pyproject.toml
backend/core/: settings.py  urls.py  utils.py
backend/core_app/: admin.py  models.py  pdf_utils.py  serializers.py  urls.py  views.py
backend/customers/: models.py  serializers.py  urls.py  views.py
backend/finance/: filters.py  models.py  pesapal_utils.py  serializers.py  views.py
backend/inventory/: admin.py  filters.py  models.py  serializers.py  views.py
backend/messaging/: models.py  serializers.py  views.py
backend/sales/: models.py  serializers.py  urls.py  utils.py  views.py
backend/users/: admin.py  models.py  serializers.py  views.py
findings/: dashboard_audit.md  dashboard_performance_deep_dive.md  deleted_sales_audit.md  financial_discrepancy_report.md  findings-receipt-mismatch.md  findings-transaction-integrity.md  findings.md  goal_tracker_n1_investigation.md  inventory_history_zero_drift_report.md  inventory_logic_deep_dive.md  inventory_overview_audit.md  requisition_tab_audit.md  restock_tab_audit.md  sales_page_audit.md  sales_source_audit.md  security_permission_bypass.md
frontend/: .gitignore  package.json
frontend/public/: service-worker.js
(+267 files in other folders)
