[project]
name = "admin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cuid2>=2.0.1",
    "dj-database-url>=3.1.2",
    "django>=6.0.3",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "django-unfold>=0.85.0",
    "djangorestframework>=3.17.0",
    "djangorestframework-simplejwt>=5.5.1",
    "dotenv>=0.9.9",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "reportlab>=4.4.10",
    "requests>=2.32.5",
]
